# rust-sandbox

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile
.claude/: settings.local.json
pkg/catr/: Cargo.toml
pkg/catr/src/: lib.rs  main.rs
pkg/catr/tests/: cli.rs
pkg/catr/tests/inputs/: spides.txt  the-bustle.txt
pkg/echor/: Cargo.toml
pkg/echor/script/: ms-outs.sh
pkg/echor/src/: lib.rs  main.rs
pkg/echor/tests/: cli.rs
pkg/guessing_game/src/: main.rs
pkg/headr/: Cargo.toml
pkg/headr/src/: lib.rs
pkg/headr/tests/: cli.rs
pkg/hello/tests/: cli.rs
pkg/minigrep/src/: lib.rs  main.rs
pkg/rust-closure/: Cargo.toml
pkg/rust-closure/src/: main.rs
pkg/rust-collection/: Cargo.toml
pkg/rust-collection/src/: main.rs
pkg/rust-concept/: Cargo.toml
pkg/rust-concept/src/: main.rs
pkg/rust-concurrency/src/: main.rs
pkg/rust-enum/: Cargo.toml
pkg/rust-enum/src/: main.rs
pkg/rust-error/: Cargo.toml
pkg/rust-error/src/: main.rs
pkg/rust-generics/: Cargo.toml
pkg/rust-generics/src/: lib.rs  main.rs
pkg/rust-oop/src/: lib.rs  main.rs
pkg/rust-package/: Cargo.toml
pkg/rust-package/src/: lib.rs  main.rs
pkg/rust-pub-crates/: Cargo.toml
pkg/rust-pub-crates/src/: lib.rs
pkg/rust-smart-pointer/: Cargo.toml
pkg/rust-smart-pointer/src/: lib.rs  main.rs
pkg/rust-struct/src/: main.rs
pkg/rust-test/src/: lib.rs
pkg/rust-test/tests/: integration_test.rs
pkg/wcr/: Cargo.toml
pkg/wcr/src/: lib.rs  main.rs
pkg/wcr/tests/: cli.rs
