[workspace]

members = [
    "pkg/echor",
    "pkg/guessing_game",
    "pkg/hello",
    "pkg/minigrep",
    "pkg/rust-closure",
    "pkg/rust-collection",
    "pkg/rust-concept", "pkg/rust-concurrency",
    "pkg/rust-enum",
    "pkg/rust-error",
    "pkg/rust-generics", "pkg/rust-oop",
    "pkg/rust-package", "pkg/rust-pub-crates", "pkg/rust-smart-pointer",
    "pkg/rust-struct",
    "pkg/rust-test"
]
